codex-rs/tui/src/app/snapshots/codex_tui__app__owned_transcript__input_tests__owned_composer_input_single_draw.snap
---
source: tui/src/app/owned_transcript_input_tests.rs
assertion_line: 125
expression: screen(&tui)
---
updated output


















› first line
  second linex

  GPT-5.6-Sol default · /tmp/project
